--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="all country details" />
 
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React</title>
+    <title>rest countries api with color theme</title>
   </head>
   <body>
     <div id="root"></div>
